midweek submission